XWIKI-22934: Bottom padding too large in box/message macros * Updated the style to avoid the bug in WYSIWYG edition too.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/messages.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/messages.less
@@ -65,7 +65,7 @@ fieldset.xwikimessage { // Used by: Login form, Delete messages
 // Remove space added by last elements inside box, like paragraphs.
 .box > div > *:last-child,
 // Do the same when the box macro is edited in-line.
-.box > .xwiki-metadata-container > *:last-child {
+.box > div > .xwiki-metadata-container > *:last-child {
   margin-bottom: 0;
 }
 
